# LiteGuard

./: .env.example  CreatePostgresDb.ps1  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: pr_title.yml  push_build.yml  release_build.yml
src/: __init__.py  run.py
src/api/: manager.py
src/api/routers/: __init__.py  dep.py  guards.py  telegram.py
src/config/: __init__.py  env.py  log.py  tg.py
src/db/: __init__.py  core.py
src/db/migrations/versions/: 20250907_init.py  20250907_users.py  20250908_servers.py  20250909_subs.py  20250910_improve_settings.py
src/db/models/: __init__.py  servers.py  settings.py  subscription.py  user.py
src/handlers/: __init__.py  commands.py  middlewares.py
src/handlers/servers/: __init__.py  create.py  info.py  menu.py  update.py
src/handlers/settings/: __init__.py  menu.py  update.py
src/handlers/subscriptions/: __init__.py  create.py  info.py  menu.py  update.py
src/keys/: __init__.py  callbacks.py  enums.py  manager.py
src/lang/: __init__.py  _button.py  _dialog.py
src/tasks/: manager.py
src/tasks/items/: __init__.py  access.py  message.py  subs.py
src/utils/: depends.py  pagination.py  qrcode.py  times.py
src/xui/: __init__.py  manager.py  request.py  types.py
