[project]
name = "liteguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "eiogram>=2.1.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "python-decouple>=3.8",
    "sqlalchemy[asyncio]>=2.0.43",
]
